tests/fail/enum_attr_1.stderr
error: proc-macro derive panicked
 --> $DIR/enum_attr_1.rs:3:17
  |
3 | #[derive(Debug, FromEnvironment)]
  |                 ^^^^^^^^^^^^^^^
  |
  = help: message: Salak attribute is not supporting enum
